# crypto-predictor-system

./: Makefile  main.py  mise.toml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
deployments/dev/kind/: create_cluster.sh  install_risingwave.sh  kind-with-portmapping.yaml
deployments/dev/technical_indicators/: technical_indicators.yaml
deployments/prod/candles/: candles.yaml
deployments/prod/trades/: trades.yaml
docker/: candles.dockerfile  technical_indicators.dockerfile  trades.dockerfile
scripts/: build-and-push-image.sh  deploy.sh
services/candles/: pyproject.toml
services/candles/src/candles/: config.py  main.py
services/technical_indicators/: pyproject.toml
services/technical_indicators/src/technical_indicators/: config.py  main.py
services/trades/: pyproject.toml  settings.env
services/trades/src/trades/: config.py  kraken_api.py  main.py
