[project]
name = "crypto-predictor-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.7",
    "quixstreams>=3.22.0",
    "requests>=2.32.4",
    "trades",
    "websocket-client>=1.8.0",
]

[tool.uv.workspace]
members = ["services/trades"]

[tool.uv.sources]
trades = { workspace = true }
